added main section our features

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,23 +30,35 @@
   padding: 20px 25px;
   border: none;
 }
+/*main section */
+.main-section {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.text-primary {
+  color: rgb(255, 144, 14, 1);
+}
 /* -------------header styles---------- */
 
 /*-------------- nav styles ------------*/
 .navber {
   justify-content: space-between;
   align-items: center;
+  list-style: none;
+  margin: 30px;
 }
 .brand {
   font-weight: 700;
   font-size: 2.8rem;
 }
-.nav-item {
+.nav-links {
   list-style: none;
   margin: 30px;
 }
+
 .nav-link {
   text-decoration: none;
+  margin: 30px;
 }
 
 .banner {
@@ -54,7 +66,7 @@
   margin: 0 auto;
 }
 
-/* banner relative styles------------ */
+/* main section ar banner relative styles------------ */
 .banner-content {
   max-width: 850px;
   margin: 0 auto;
@@ -69,17 +81,55 @@
   font-size: 1rem;
   font-weight: 700;
   opacity: 0.7;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
 }
-.banner-image{
-    width: 100%;
+.banner-image {
+  width: 100%;
+}
+.teams {
+  justify-content: center;
+  align-items: center;
+}
+.teams-image-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin-top: 80px;
+}
+.our-features {
+  margin-left: 150px;
+  max-width: 500px;
+}
+.feature-description {
+  font-size: 16px;
+}
+.feature-title {
+  font-size: 2.8rem;
+  font-weight: 700;
 }
 
+#quick-list {
+  font-weight: 500;
+}
 
 /* -----------Responsive Media Query ----------------*/
 
-@media screen and (max-wigth:576px){
-    .navber, .nav-links{
-        flex-direction: column;
-    }
+/* @media screen and (max-wigth: 576px) {
+  .navber,
+  .nav-links ,
+  .teams{
+    flex-direction: column;
+  }
+} */
+@media screen and (max-width: 576px) {
+  .navber,
+  .teams {
+    flex-direction: column;
+  }
+  .teams-image-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .our-features {
+    margin-left: 20px;
+  }
 }
