--- a/styles/style.css
+++ b/styles/style.css
@@ -170,7 +170,24 @@
 }
 .sponser-company img{
   filter: grayscale(100%);
+}
 /* ------------------footer section ----------------*/
+.footer-section{
+  max-width: 1440px;
+  height: 100px;
+  background-color: rgb(255, 244, 231);
+  margin-top: 45px;
+  margin-bottom: 30px;
+
+}
+.footer-description{
+  color: rgb(66, 66, 66);
+  font-size: 20px;
+  font-weight: 400;  
+  text-align: center;
+  padding-top: 40px;
+
+}
 
 
 
